feat: add create table
